--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -1,5 +1,5 @@
 # Reusable workflow to trigger fixture regeneration in tester repos.
-# The tester repo should have a defined repo secret with repo, workflow access # named `RYAN_FIXTURE_GEN_PAT`.
+# The tester repo should have a defined repo secret with repo, workflow access # named `TESTER_FIXTURE_GENERATION_GITHUB_TOKEN`.
 # The repo also needs to define `make test` as a job in the Makefile.
 # The workflow will trigger on a `regenerate-fixtures` label on a PR.
 # While calling this workflow, the caller can pass all its secrets using:
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.RYAN_FIXTURE_GEN_PAT }}
+          token: ${{ secrets.TESTER_FIXTURE_GENERATION_GITHUB_TOKEN }}
 
       - name: Set up Go
         uses: actions/setup-go@v1
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config --global user.email "ryan-gg@outlook.com"
           git config --global user.name "Ryan Gang"
-          git remote set-url origin https://ryan-gang:${{ secrets.RYAN_FIXTURE_GEN_PAT }}@github.com/codecrafters-io/shell-tester.git
+          git remote set-url origin https://ryan-gang:${{ secrets.TESTER_FIXTURE_GENERATION_GITHUB_TOKEN }}@github.com/codecrafters-io/shell-tester.git
           git fetch origin ${{ github.head_ref }}
           git checkout ${{ github.head_ref }}
           git diff --quiet || (git add . && git commit -m "ci: add regenerated fixtures" && git push)
