--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -42,7 +42,7 @@ jobs:
       
       - name: Set up prerequisites
         if: ${{ github.event.inputs.tester_repo == 'interpreter-tester' }}
-        uses: codecrafters-io/interpreter-tester/.github/workflows/test.yml@fixture-gen-action
+        uses: codecrafters-io/codecrafters-action@402e823b111453d1b288e429c52a9d4f9a9bf9ea
 
       - name: Regenerate Fixtures
         run: CODECRAFTERS_RECORD_FIXTURES=true make test 
