--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -39,7 +39,14 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           labels: regenerate-fixtures
-      
+
+      - name: debug
+        run: |
+          echo "context: ${{ github.event }}"
+          echo "inputs: ${{ github.event.inputs }}"
+          echo "tester_repo: ${{ github.event.inputs.tester_repo }}"
+
+          
       - name: Set up prerequisites
         if: github.event.inputs.tester_repo == 'interpreter-tester'
         uses: codecrafters-io/codecrafters-action@402e823b111453d1b288e429c52a9d4f9a9bf9ea
