chore: update GitHub Actions workflow to include git configuration step before regenerating fixtures

--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -48,14 +48,17 @@ jobs:
         if: inputs.tester_repo == 'redis-tester'
         uses: codecrafters-io/codecrafters-action/.github/actions/redis-setup@ef5aeb9504e08cccfe71e1dbcf806fab3738019d
 
-      - name: Regenerate Fixtures
-        run: CODECRAFTERS_RECORD_FIXTURES=true make test 
-
-      - name: Update Fixtures
+      - name: Setup git config
         run: |
           git config --global user.email "ryan-gg@outlook.com"
           git config --global user.name "Ryan Gang"
           git remote set-url origin https://ryan-gang:${{ secrets.TESTER_FIXTURE_GENERATION_GITHUB_TOKEN }}@github.com/codecrafters-io/${{ inputs.tester_repo }}.git
           git fetch origin ${{ github.head_ref }}
           git checkout ${{ github.head_ref }}
+
+      - name: Regenerate Fixtures
+        run: CODECRAFTERS_RECORD_FIXTURES=true make test 
+
+      - name: Update Fixtures
+        run: |
           git diff --quiet || (git add . && git commit -m "ci: add regenerated fixtures" && git push)
